mobile only popup offer fix for safari browser on iphone 5s

--- a/_assets/includes/mobile-only-offer.css
+++ b/_assets/includes/mobile-only-offer.css
@@ -36,7 +36,7 @@
   color: #fff;
   background: #0bb7e4;
   display: inline-block;
-  margin: 20px 0 0;
+  margin: 0;
   text-transform: uppercase;
   letter-spacing: 2px;
   width: 100%;
@@ -44,12 +44,12 @@
 .mobile-only-offer .container h1 {
   text-transform: uppercase;
   padding: 0;
-  font-size: 28px;
+  font-size: 22px;
   line-height: 30px;
 }
 .mobile-only-offer .container h4 {
   text-transform: uppercase;
-  padding: 10px 0 0 0;
+  padding: 0;
   font-size: 14px;
   line-height: 16px;
 }
